tests/baselines/reference/conflictingTypeAnnotatedVar.errors.txt
tests/cases/compiler/conflictingTypeAnnotatedVar.ts(1,5): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/conflictingTypeAnnotatedVar.ts(2,10): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/conflictingTypeAnnotatedVar.ts(2,10): error TS2393: Duplicate function implementation.
tests/cases/compiler/conflictingTypeAnnotatedVar.ts(2,17): error TS2847: A function with this return type needs to explicitly return a value.
tests/cases/compiler/conflictingTypeAnnotatedVar.ts(3,10): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/conflictingTypeAnnotatedVar.ts(3,10): error TS2393: Duplicate function implementation.
tests/cases/compiler/conflictingTypeAnnotatedVar.ts(3,17): error TS2847: A function with this return type needs to explicitly return a value.


==== tests/cases/compiler/conflictingTypeAnnotatedVar.ts (7 errors) ====
    var foo: string;
        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    function foo(): number { }
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
             ~~~
!!! error TS2393: Duplicate function implementation.
                    ~~~~~~
!!! error TS2847: A function with this return type needs to explicitly return a value.
    function foo(): number { }
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
             ~~~
!!! error TS2393: Duplicate function implementation.
                    ~~~~~~
!!! error TS2847: A function with this return type needs to explicitly return a value.